<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputEmailRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.inputemail.InputEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connectingStatus"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/red_900"
            android:text="Ожидание соединения..." />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp" >

            <ImageView
                android:id="@+id/coffeeIc"
                android:layout_width="wrap_content"
                android:layout_height="257dp"
                app:srcCompat="@drawable/coffee" />
        </FrameLayout>

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="Welcome! :0"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:hint="@string/email"

            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textEmailAddress"
                android:lines="1"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueButton"
                android:layout_width="350dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="0dp"
                android:text="@string/continue_btn"
                app:cornerRadius="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField"
                app:layout_constraintVertical_bias="0.0" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
